# coxn

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.adoc  INSTALL.md  PLAN.adoc  README.md
.aden/: config.toml.example  savings.json
.github/workflows/: ci.yml
docs/: contract.adoc  demo-scope-escape.cast  next-generation-harness-plan.adoc  provider-auth-plan.adoc  routing.adoc  tui-2.0-plan.adoc  tui-3.0-structure.adoc  tui-frictionless-plan.adoc
scratch/gated-loop/: CHECKLIST.md  IMPROVEMENTS.md  LOG.md  PRODUCTION-CHECKLIST.md
scripts/: check-no-secrets.sh  demo-sandbox.sh  demo-scope-escape.sh  pty-smoke.sh  record-scope-escape.sh  setup-ollama-user.sh  smoke-execute-partition.sh  smoke-gate.sh  smoke-ollama.sh
src/: aden.rs  agents.rs  app.rs  auth.rs  claude_cli.rs  cli_ndjson.rs  codex_app_server.rs  codex_model.rs  codex_probe.rs  commands.rs  discover.rs  doctor.rs  drive.rs  execute.rs  gate.rs  grok_cli.rs  layout.rs  main.rs  model.rs  mouse.rs  ollama.rs  openai.rs  provider.rs  pump.rs  run_ledger.rs  sandbox.rs  session.rs  stream_idle.rs  test_env.rs  tools.rs  trust.rs  tui.rs  vim.rs
src/drive/: ex.rs  input.rs  mod.rs
src/ui/: mod.rs  render.rs  transcript.rs
