[package]
name = "coxn"
version = "0.1.0"
edition = "2024"
description = "A lean, provider-agnostic terminal harness that drives an LLM which drives aden."
authors = ["RioPlay <rioplay@rioplay.dev>"]
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.2"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
