[package]
name = "coxn"
version = "0.2.0"
edition = "2024"
description = "A lean, provider-agnostic terminal harness that drives an LLM which drives aden."
authors = ["RioPlay <rioplay@rioplay.dev>"]
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros", "process", "io-util", "time"] }
ureq = { version = "3.3.0", default-features = false, features = ["rustls", "json"] }
