[package]
name = "coxn"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
description = "Lean gated terminal harness for coding LLMs with optional aden blast-radius scope."
authors = ["RioPlay <rioplay@rioplay.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RioPlay/coxn"
keywords = ["tui", "llm", "agent", "coding", "sandbox"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros", "process", "io-util", "time"] }
ureq = { version = "3.3.0", default-features = false, features = ["rustls", "json"] }
